# moss-lang

./: .gitignore  CMakeLists.txt  install.sh  moss.cpp  moss.hpp  readme.md
bytecode/: bytecode.cpp  bytecode.hpp  bytecode_blob.cpp  bytecode_blob.hpp  bytecode_header.hpp  bytecode_reader.cpp  bytecode_reader.hpp  bytecode_writer.cpp  bytecode_writer.hpp  bytecodegen.cpp  bytecodegen.hpp  opcode.cpp  opcode.hpp
bytecode/optimizer/: bc_pass.hpp  bc_pipeline.cpp  bc_pipeline.hpp  register_reuse_pass.cpp  register_reuse_pass.hpp
docs/: Doxyfile  readme.ms
docs/example_programs/: bday_golf.ms  mcat.ms  pi_monte_carlo.html  pi_monte_carlo.md  pi_monte_carlo.ms  pso.ms
docs/language-reference/: 1-moss-language-reference.md  1-moss-language-reference.ms  2-syntax-and-constructs.md  2-syntax-and-constructs.ms  2-types-and-values.md  2-types-values-and-operators.md  3-notes.md  4-types-values-and-operators.md  5-functions.md  6-classes-and-spaces.md  7-annotations.md  x-bytecode-and-program-sharing.md  x-interoperability-with-c.md  x-interoperability-with-python.md
docs/proposals/: error-messages.md  fstrings.md  imports.md  new-fun-call.md  notes.md  repl.md
frontend/: lexer.hpp  parser.cpp  parser.hpp  scanner.cpp  scanner.hpp  source.cpp  source.hpp
highlighters/vscode/moss-lang/: CHANGELOG.md  README.md  package.json
interface/: clopts.cpp  clopts.hpp  commons.cpp  commons.hpp  diagnostics.cpp  diagnostics.hpp  errors.cpp  errors.hpp  logging.cpp  logging.hpp  os_interface.hpp  repl.cpp  repl.hpp  utils.cpp  utils.hpp
midend/: ast.cpp  ast.hpp  expression_analyzer.cpp  expression_analyzer.hpp  function_analyzer.cpp  function_analyzer.hpp  ir.cpp  ir.hpp  ir_pipeline.cpp  ir_pipeline.hpp  ir_visitor.cpp  ir_visitor.hpp  method_analyzer.cpp  method_analyzer.hpp
midend/analysis/: expression_analyzer.cpp  expression_analyzer.hpp  function_analyzer.cpp
midend/transforms/: constant_folding.cpp  constant_folding.hpp  dead_code_elimination.cpp  dead_code_elimination.hpp
stdlib/: builtins.cpp  builtins.hpp  cffi.cpp  cffi.hpp  cffi.ms  csv_parser.ms  html_parser.ms  inspect.cpp  inspect.hpp  inspect.ms  json_parser.ms  libms.ms  math.cpp  math.hpp  math.ms  md_parser.ms  mossy.css  mslib.cpp  mslib.hpp  mslib_dict.cpp  mslib_dict.hpp  mslib_file.cpp  mslib_file.hpp  mslib_list.cpp  mslib_list.hpp  mslib_string.cpp  mslib_string.hpp  parsing_utils.ms  python.cpp  python.hpp  python.ms  re.cpp  re.hpp  re.ms  subprocess.cpp  subprocess.hpp  subprocess.ms  sys.cpp  sys.hpp  sys.ms  (+3 more)
tests/: all_constructs.ms  annotations.ms  anti-primes.ms  ascending_primes.ms  ascending_primes.py  asserts.ms  attribute_errors.ms  attributes.ms  bc_read_write_expected.txt  bytes.ms  calls.ms  classes.ms  closures.ms  collatz.ms  compound_assignment.ms  continues_and_breaks.ms  converters.ms  converters_pipeline.ms  cycles_and_exceptions.ms  dict_insertion_order.ms  dicts.ms  docstrings.ms  enable_code_output.ms  enable_code_output_expected.md  enums.ms  equalities.ms  escaping.ms  escaping_expected.txt  example_markdown.ms  exceptions_catch.ms  expressions.ms  ext_module.ms  factorial.ms  fibonacci.ms  finally.ms  finally_advanced.ms  fors.ms  fstrings.ms  function_overwriting.ms  functions.ms  (+48 more)
tests/bytecode_tests/: corrupted_msb.msb  newer_bc_version.msb
tests/exception_tests/: general_catch_finally.ms  mangled_stack.ms  mod_raiser.ms  nested_finally.ms  nested_finally_caller.ms  stackframe_report.ms
tests/gc_tests/: external_module.ms  external_module2.ms  external_module_user.ms  global_dependency.ms  local_vars.ms  recursion.ms
tests/module_tests/: exit_external.ms  greet.ms  greet_bc.ms  imported_module_with_main.ms  local_import.ms  mod1.ms  mod2.ms  mod3.ms  module.ms  module_with_main.ms  space_user.ms  spaced_module.ms  square.ms
tests/stdlib_tests/: attrs.ms  builtin_exceptions.ms  complex.ms  constants.ms  copy.ms  dicts.ms  empty_module.ms  enumerate.ms  exit.ms  extending_dict.ms  extending_int_float.ms  extending_int_float_bool.ms  extending_list.ms  extending_note.ms  extending_string.ms  file.ms  file_seek.ms  filters.ms  float_methods.ms  globals.ms  help.ms  info.ms  input.ms  input_eof.ms  inspect.ms  int_methods.ms  isinstance.ms  iterable_funs.ms  list_delete.ms  lists.ms  map.ms  math.ms  moss_module.ms  print.ms  random.ms  ranges.ms  string_is.ms  strings.ms  strings2.ms  type_constructors.ms  (+3 more)
tests/stdlib_tests/cffi_tests/: clib.c  clib.ms
tests/stdlib_tests/csv_parser_tests/: csv_converters.ms  csv_note.ms  csv_writer.ms  dialects.ms  dict_reader.ms  example.csv  excel_data.csv  excel_data_tabs.csv  excel_dialect.ms  non_numeric_parsing.ms  strict_dialect.ms  value_parsing.ms
tests/stdlib_tests/inspect_tests/: inspect.ms
tests/stdlib_tests/json_parser_tests/: basics.ms  complex.ms  complex_json.js
tests/stdlib_tests/math_tests/: arithmetics.ms  complex.ms  generals.ms  goniometrics.ms  hyperbolics.ms
tests/stdlib_tests/md_parser_tests/: all_constructs.md  markdown_parsing.ms  markdown_parsing_expected_out.txt  tables.ms  to_html.ms  to_txt.ms
tests/stdlib_tests/python_tests/: py_attrs_calls.ms  py_module_imports.ms  py_type_conversions.ms
tests/stdlib_tests/re_tests/: flags.ms  match_search.ms  replace.ms
tests/stdlib_tests/subprocess_tests/: system_and_run.ms
tests/stdlib_tests/sys_tests/: environment.ms  interpreter_info.ms  platform.ms
tests/stdlib_tests/time_tests/: clock_time.ms
tests/unittests/: test_bcg_analysis.cpp  test_bytecode.cpp  test_bytecode_blob.cpp  test_bytecode_rw.cpp  test_bytecode_transforms.cpp  test_clopts.cpp  test_constant_folding.cpp  test_dead_code_elimination.cpp  test_dummy.cpp  test_expression_analysis.cpp  test_function_analysis.cpp  test_functions.cpp  test_gc.cpp  test_interpreter.cpp  test_ir.cpp  test_memory.cpp  test_method_analysis.cpp  test_parser.cpp  test_parser_examples.cpp  test_passes.cpp  test_scanner.cpp  testing_utils.cpp  testing_utils.hpp
vm/: gc.cpp  gc.hpp  interpreter.cpp  interpreter.hpp  memory.cpp  memory.hpp  types.cpp  types.hpp  values.cpp  values.hpp  values_cpp.hpp
(+1 files in other folders)
